[B][COLOR red]Update - v1.1.5 - May 21, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed "Browse Series" and "Play from Here".[/I]

[B][COLOR red]Update - v1.1.4 - May 18, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Rescrape from widget loading old cached values upon
    re-entry of source select dialog.[/I]

[B][COLOR red]Update - v1.1.3 - April 18, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Update for compatibility with plugin.video.venom TVShow meta provider
    change from TVDb to TMDb.[/I]

[B][COLOR red]Update - v1.1.2 - March 10, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Change method of determining bookmarks to use "ListItem.IsResumable".[/I]

[B][COLOR red]Update - v1.1.1 - March 06, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Matrix(py3) compatibility update.[/I]

[B][COLOR red]Update - v1.1.0 - Oct. 05, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Service module cleanup.[/I]
[COLOR yellow]--[/COLOR][I] Changed to new fanart.[/I]

[B][COLOR red]Update - v1.0.9 - Oct. 05, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Trakt Manager not opening.[/I]
[COLOR yellow]--[/COLOR][I] Fixed Context Settings not opening.[/I]
[COLOR yellow]--[/COLOR][I] Fixed service update check.[/I]

[B][COLOR red]Update - v1.0.8 - Sept 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fix issue with accent characters causing stop errors.[/I]
[COLOR yellow]--[/COLOR][I] added service logging notice for kodi.log.[/I]

[B][COLOR red]Update - v1.0.7 - Sept 04, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fix typo in version bump and updated changelog[/I]

[B][COLOR red]Update - v1.0.6 - Sept 03, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Changes for Venom compliant code requirements[/I]

[B][COLOR red]Update - v1.0.5 - May 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added service for settings changes.  This now helps items
    to change and be more responsive than before.[/I]