@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.venom" name="Venom - Global Context Menu Items" provider-name="Venom" version="1.1.5">
+<addon id="context.venom" name="Venom - Global Context Menu Items" provider-name="Venom" version="1.1.6">
 	<requires>
 		<import addon="script.module.requests" version="2.19.1" />
 	</requires>
@@ -128,8 +128,10 @@
 			<screenshot></screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.1.5 - May 21, 2021[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed "Browse Series" and "Play from Here".[/I]
+[B][COLOR red]Update - v1.1.6 - May 26, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Update "Browse Series" to reflect "tvshow.clearart" and "tvshow.clearlogo"
+    changes in Venom  This is only seen when Venom is set to "Direct Progress Scraping"
+    and "Browse Serires" is chosen.[/I]
 		</news>
 	</extension>
 </addon>
