@@ -42,11 +42,10 @@ if __name__ == '__main__':
 	sysmeta = quote_plus(jsdumps(meta))
 
 	if 'tvshowtitle' in meta:
-		url = '%s?action=play&title=%s&year=%s&imdb=%s&tvdb=%s&season=%s&episode=%s&tvshowtitle=%s&premiered=%s&meta=%s' % (
+		url = '%s?action=play_Item&title=%s&year=%s&imdb=%s&tvdb=%s&season=%s&episode=%s&tvshowtitle=%s&premiered=%s&meta=%s' % (
 								plugin, systitle, year, imdb, tvdb, season, episode, systvshowtitle, premiered, sysmeta)
 	else:
-		url = '%s?action=play&title=%s&year=%s&imdb=%s&meta=%s' % (plugin, systitle, year, imdb, sysmeta)
-
+		url = '%s?action=play_Item&title=%s&year=%s&imdb=%s&meta=%s' % (plugin, systitle, year, imdb, sysmeta)
 	sysurl = quote_plus(url)
 	path = 'RunPlugin(%s?action=alterSources&url=%s&meta=%s)' % (plugin, sysurl, sysmeta)
 	xbmc.executebuiltin(path)
