@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-# from json import dumps as jsdumps, loads as jsloads
+from json import dumps as jsdumps, loads as jsloads
 import sys
 import xbmc
 try: #Py2
@@ -24,5 +24,16 @@ if __name__ == '__main__':
 	tvshowtitle = params.get('tvshowtitle', '')
 	systvshowtitle = quote_plus(tvshowtitle)
 	sysart = quote_plus(params.get('art', '')) if params.get('art') else ''
+	if not sysart and 'meta' in params:
+		meta = jsloads(params['meta'])
+		art = {}
+		art['fanart'] = meta.get('fanart', '')
+		art['icon'] = meta.get('icon', '')
+		art['thumb'] = meta.get('thumb', '')
+		art['banner'] = meta.get('banner', '')
+		art['clearlogo'] = meta.get('clearlogo', '')
+		art['clearart'] = meta.get('clearart', '')
+		art['landscape'] = meta.get('landscape', '')
+		sysart = quote_plus(jsdumps(art))
 
 	xbmc.executebuiltin('ActivateWindow(Videos,plugin://plugin.video.venom/?action=seasons&tvshowtitle=%s&year=%s&imdb=%s&tmdb=%s&tvdb=%s&art=%s,return)' % (systvshowtitle, year, imdb, tmdb, tvdb, sysart))
