@@ -2,13 +2,11 @@
 
 import sys
 import xbmc
-
 try: #Py2
 	from urlparse import parse_qsl
 	from urllib import quote_plus
 except ImportError: #Py3
 	from urllib.parse import parse_qsl, quote_plus
-
 
 if __name__ == '__main__':
 	item = sys.listitem
